[OpenGL Loader - Singleton]
Made a singleton class to initialise and setup OpenGL, GLFW, and GLAD.
Moved the init code from main into it.

Singletons seem to be a bit more nuanced in C++ than memory managed languages, so need to lookout for it in the future as I grow the code base.

--- a/renderframework-opengl/renderframework-opengl/renderframework-opengl.vcxproj
+++ b/renderframework-opengl/renderframework-opengl/renderframework-opengl.vcxproj
@@ -130,9 +130,11 @@
   <ItemGroup>
     <ClCompile Include="glad.c" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="OpenGLLoader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="HelperFunctions.h" />
+    <ClInclude Include="OpenGLLoader.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
