[File loader and Shader]
Made a simple text file loader to be used to grab the shader source code from txt files.

Shader class simple for now, based from the learnOpenGL web tutorial.
Will be modified later to include matrix transformation parameter passing.

--- a/renderframework-opengl/renderframework-opengl/renderframework-opengl.vcxproj
+++ b/renderframework-opengl/renderframework-opengl/renderframework-opengl.vcxproj
@@ -128,21 +128,29 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="FileLoader.cpp" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="InterleavedVertex.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="OpenGLLoader.cpp" />
+    <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Square.cpp" />
     <ClCompile Include="Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="FileLoader.h" />
     <ClInclude Include="HelperFunctions.h" />
     <ClInclude Include="InterleavedVertex.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="OpenGLLoader.h" />
+    <ClInclude Include="Shader.h" />
     <ClInclude Include="Square.h" />
     <ClInclude Include="Timer.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="shader.fs" />
+    <None Include="shader.vs" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
