--- a/renderframework-opengl/renderframework-opengl/renderframework-opengl.vcxproj
+++ b/renderframework-opengl/renderframework-opengl/renderframework-opengl.vcxproj
@@ -130,12 +130,14 @@
   <ItemGroup>
     <ClCompile Include="FileLoader.cpp" />
     <ClCompile Include="glad.c" />
+    <ClCompile Include="HelperFunctions.cpp" />
     <ClCompile Include="InterleavedVertex.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="OpenGLLoader.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Square.cpp" />
+    <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -146,11 +148,19 @@
     <ClInclude Include="OpenGLLoader.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Square.h" />
+    <ClInclude Include="stb_image.h" />
+    <ClInclude Include="Texture.h" />
     <ClInclude Include="Timer.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="coltex-shader.fs" />
+    <None Include="coltex-shader.vs" />
     <None Include="shader.fs" />
     <None Include="shader.vs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="awesomeface.png" />
+    <Image Include="container.jpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
