--- a/renderframework-opengl/renderframework-opengl/renderframework-opengl.vcxproj
+++ b/renderframework-opengl/renderframework-opengl/renderframework-opengl.vcxproj
@@ -128,6 +128,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="FileLoader.cpp" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="HelperFunctions.cpp" />
@@ -137,11 +138,14 @@
     <ClCompile Include="OpenGLLoader.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Square.cpp" />
+    <ClCompile Include="StaticMesh.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="Transform.cpp" />
+    <ClCompile Include="TransformHelperFunctions.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="FileLoader.h" />
     <ClInclude Include="HelperFunctions.h" />
     <ClInclude Include="InterleavedVertex.h" />
@@ -149,10 +153,12 @@
     <ClInclude Include="OpenGLLoader.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Square.h" />
+    <ClInclude Include="StaticMesh.h" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="Transform.h" />
+    <ClInclude Include="TransformHelperFunctions.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="coltex-shader.fs" />
