--- a/renderframework-opengl/renderframework-opengl/renderframework-opengl.vcxproj
+++ b/renderframework-opengl/renderframework-opengl/renderframework-opengl.vcxproj
@@ -132,6 +132,8 @@
     <ClCompile Include="Component.cpp" />
     <ClCompile Include="FileLoader.cpp" />
     <ClCompile Include="FPSDemo.cpp" />
+    <ClCompile Include="FPSMovementComponent.cpp" />
+    <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="HelperFunctions.cpp" />
     <ClCompile Include="Input.cpp" />
@@ -145,6 +147,7 @@
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Square.cpp" />
     <ClCompile Include="StaticMesh.cpp" />
+    <ClCompile Include="TestComponent.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="Transform.cpp" />
@@ -155,6 +158,7 @@
     <ClInclude Include="Component.h" />
     <ClInclude Include="FileLoader.h" />
     <ClInclude Include="FPSDemo.h" />
+    <ClInclude Include="FPSMovementComponent.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="HelperFunctions.h" />
     <ClInclude Include="Input.h" />
@@ -168,6 +172,7 @@
     <ClInclude Include="Square.h" />
     <ClInclude Include="StaticMesh.h" />
     <ClInclude Include="stb_image.h" />
+    <ClInclude Include="TestComponent.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="Transform.h" />
