[RenderComponent, Friend classes, and Factories]
Created a render component to allow a gameobject to have a mesh attached to it.
Rendercomponent still needs to have some logic to auto-add itself to a render queue.
A render queue is also needed next.

Friend classes are working for some of the logic, but for user made components inherited from the component class, its causing some issues with the constructors.
Derived classes do not inherit the friendship from component, so a factory method will be needed next. Maybe via reflection if possible, or some other method.
Easy solution is to parametise the addcomponent function instead of template it.

Cleaned up unnecessary functions out from other classes and test files.

Camera now has a MainCamera static member that defaults to the first camera to be created when there isn't a camera available.

--- a/renderframework-opengl/renderframework-opengl/renderframework-opengl.vcxproj
+++ b/renderframework-opengl/renderframework-opengl/renderframework-opengl.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="OpenGLLoader.cpp" />
     <ClCompile Include="PrimitiveShapes.cpp" />
+    <ClCompile Include="RenderComponent.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Square.cpp" />
@@ -167,6 +168,7 @@
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="OpenGLLoader.h" />
     <ClInclude Include="PrimitiveShapes.h" />
+    <ClInclude Include="RenderComponent.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Square.h" />
