--- a/renderframework-opengl/renderframework-opengl/renderframework-opengl.vcxproj
+++ b/renderframework-opengl/renderframework-opengl/renderframework-opengl.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="OpenGLLoader.cpp" />
     <ClCompile Include="PrimitiveShapes.cpp" />
     <ClCompile Include="RenderComponent.cpp" />
+    <ClCompile Include="RenderQueue.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Square.cpp" />
@@ -169,6 +170,7 @@
     <ClInclude Include="OpenGLLoader.h" />
     <ClInclude Include="PrimitiveShapes.h" />
     <ClInclude Include="RenderComponent.h" />
+    <ClInclude Include="RenderQueue.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Square.h" />
