--- a/renderframework-opengl/renderframework-opengl/renderframework-opengl.vcxproj
+++ b/renderframework-opengl/renderframework-opengl/renderframework-opengl.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="InterleavedVertex.cpp" />
     <ClCompile Include="Line.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Material.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="OpenGLLoader.cpp" />
     <ClCompile Include="PrimitiveShapes.cpp" />
@@ -169,6 +170,7 @@
     <ClInclude Include="Input.h" />
     <ClInclude Include="InterleavedVertex.h" />
     <ClInclude Include="Line.h" />
+    <ClInclude Include="Material.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="OpenGLLoader.h" />
     <ClInclude Include="PrimitiveShapes.h" />
@@ -195,6 +197,7 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="awesomeface.png" />
+    <Image Include="brick.jpg" />
     <Image Include="container.jpg" />
   </ItemGroup>
   <ItemGroup>
