[Text Rendering Component]
Began the makings of a UIRenderComponent that for now just renders text.
Spent way too long trying to get this to work with triangle strips... winding order and uvs were too pesky, so regular triangle list is used.
Based on the learnopengl.com text rendering tutorial. The tutorial has a few winding issues in the render plane for the text ui.

Next, more debugging facilities to visualise the parameters and data of entities.
-Render their orientation
-Create bounding boxes and render them

Also, it is currently a bit cumbersome to create a simple mesh and render it in the framework.
A simple helper function to setup a ready gameobject or a more intuitive object that neglects the render pipeline and can be used outside of the framework for debugging purposes is needed.
Adding an "opengl code" object, which allows the user to inject their own opengl code to be run independently might be useful... but it defeats the purpose of using the framework then.
As this is using C++ and opengl it is possible to just write opengl code anywhere, but offering a VertexBufferObject/Array object that can have data and buffers prepared easily might be useful.

--- a/renderframework-opengl/renderframework-opengl/renderframework-opengl.vcxproj
+++ b/renderframework-opengl/renderframework-opengl/renderframework-opengl.vcxproj
@@ -71,9 +71,11 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <IncludePath>C:\devlibs\opengl-libs\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\devlibs\opengl-libs\libs;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <IncludePath>C:\devlibs\opengl-libs\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\devlibs\opengl-libs\libs;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -83,7 +85,7 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>opengl32.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;glfw3.lib;freetype.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>C:\devlibs\opengl-libs\libs;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalOptions>/NODEFAULTLIB:library %(AdditionalOptions)</AdditionalOptions>
     </Link>
@@ -108,7 +110,7 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>opengl32.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;glfw3.lib;freetype.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>C:\devlibs\opengl-libs\libs;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalOptions>/NODEFAULTLIB:library %(AdditionalOptions)</AdditionalOptions>
     </Link>
@@ -158,10 +160,12 @@
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="Transform.cpp" />
     <ClCompile Include="TransformHelperFunctions.cpp" />
+    <ClCompile Include="UIRenderComponent.cpp" />
     <ClCompile Include="UpdateableComponent.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="CharacterFontData.h" />
     <ClInclude Include="Component.h" />
     <ClInclude Include="ComponentUpdateQueue.h" />
     <ClInclude Include="FileLoader.h" />
@@ -191,11 +195,17 @@
     <ClInclude Include="Timer.h" />
     <ClInclude Include="Transform.h" />
     <ClInclude Include="TransformHelperFunctions.h" />
+    <ClInclude Include="UIRenderComponent.h" />
     <ClInclude Include="UpdateableComponent.h" />
   </ItemGroup>
   <ItemGroup>
+    <CopyFileToFolders Include="..\..\..\..\..\..\..\devlibs\opengl-libs\libs\freetype.dll">
+      <FileType>Document</FileType>
+    </CopyFileToFolders>
     <None Include="coltex-shader.fs" />
     <None Include="coltex-shader.vs" />
+    <None Include="font-shader.fs" />
+    <None Include="font-shader.vs" />
     <None Include="shader.fs" />
     <None Include="shader.vs" />
     <None Include="transform-coltex-shader.vs" />
@@ -208,6 +218,9 @@
   <ItemGroup>
     <Text Include="Object-class-design.txt" />
     <Text Include="Todo-list.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Font Include="arial.ttf" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
